# Pluse_betting_cxx

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_benchmarks.sh
benchmarks/: CMakeLists.txt  benchmark_main.cpp
cmake/: betting_by_timeConfig.cmake.in
doc/: ADAPTIVE_BETTING_GUIDE.md  ADAPTIVE_IMPLEMENTATION_SUMMARY.md  ADAPTIVE_QUICK_REF.md  BENCHMARK_GUIDE.md  BENCHMARK_SUMMARY.md  BET_ON_ESTIMATE_GUIDE.md
examples/: CMakeLists.txt  basic_usage.cpp  test_adaptive_betting.cpp  test_bet_on_estimate.cpp
include/betting_by_time/: bet_on_estimate.hpp  bet_once.hpp  framework.hpp
include/betting_by_time/capital/: geo_checking.hpp  sequence_checking.hpp  sequence_lambda.hpp  time_slice_lambda.hpp
include/betting_by_time/core/: types.hpp  utilities.hpp
include/betting_by_time/strategies/: adaptive_betting.hpp  vanilla_betting.hpp
src/: adaptive_betting.cpp  bet_once.cpp  betting_python.cpp  framework.cpp  geo_checking.cpp  sequence_checking.cpp  utilities.cpp  vanilla_betting.cpp
tests/: CMakeLists.txt  generate_test_data.py  test_betting_strategies.cpp  test_capital_processes.cpp  test_equivalence.cpp  test_equivalence.py  test_types.cpp  test_utilities.cpp
tests/test_data/: test_data_adaptive_geo.csv  test_data_adaptive_seq.csv  test_data_vanilla_geo.csv  test_data_vanilla_seq.csv
